--- a/stafflogin.html
+++ b/stafflogin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Staff Login</title>
     <style>
         body {
             margin: 0;
@@ -19,7 +19,6 @@
         }
 
         .glass-container {
-            
             padding: 20px;
             border-radius: 10px;
             width: 300px;
@@ -27,26 +26,26 @@
 
         .login-box {
             text-align: center;
-            background: none; 
+            background: none;
         }
 
         .role-buttons button {
-        background-color: #d0d3da;
-        color: #080808;
-        padding: 10px 10px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-bottom: 5px;
-        width: 40%; 
-        font-size: 16px;
-        display: inline-block; 
-        margin-right: 4%; 
-
+            /* background-color: #d0d3da; */
+            color: #080808;
+            padding: 10px 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-bottom: 5px;
+            width: 40%;
+            font-size: 16px;
+            display: inline-block;
+            margin-right: 4%;
         }
+        
 
         .role-buttons button:hover {
-            background-color: #2980b9; 
+            background-color: #2980b9;
         }
 
         form {
@@ -63,43 +62,58 @@
         }
 
         button[type="submit"] {
-            background-color: #2ecc71; 
-            color: #fff; 
-            padding: 9px; 
+            background-color: #2ecc71;
+            color: #fff;
+            padding: 9px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            width: 100%; 
+            width: 100%;
             font-size: 16px;
         }
 
         button[type="submit"]:hover {
-            background-color: #27ae60; 
+            background-color: #27ae60;
+        }
+        .staffbtn{
+            background-color: #2980b9;
         }
 
     </style>
+    <script>
+        function validateForm(event) {
+            event.preventDefault(); // Prevent the form from submitting
+
+            var username = document.getElementById("username").value;
+            var password = document.getElementById("password").value;
+
+            if (username === "staff" && password === "Staff@1234") {
+                window.location.href = "display.php";
+            } else {
+                alert("Invalid username or password");
+            }
+        }
+    </script>
 </head>
 
 <body>
     <div class="glass-container">
         <div class="login-box">
-            <h2>LOGIN</h2>
+            <h2>STAFF LOGIN</h2>
 
             <div class="role-buttons">
-                <button onclick="window.location.href='admin_login.html'">Admin</button>
-                <button onclick="window.location.href='staff_login.html'">Staff</button>
+                <a href="adminlogin.html"><button >Admin</button></a>
+                <a href="stafflogin.html"><button class="staffbtn" >Staff</button></a>
             </div>
 
-            <form action="connect.php" method="POST">
+            <form onsubmit="validateForm(event)">
                 <input type="text" id="username" name="Username" required placeholder="Username">
                 <input type="password" id="password" name="Password" required placeholder="Password">
-                <div class="options">
-
-                </div>
-                <button type="submit" value="submit"><a href="display.php"> Login </a> </button>
-
+                <div class="options"></div>
+                <button type="submit" value="submit">Login</button>
             </form>
         </div>
     </div>
 </body>
+
 </html>
